<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.visak.assignment2.MainActivity"
    android:background="@drawable/emirates">


    <TextView
        android:id="@+id/counter"
        android:layout_width="38dp"
        android:layout_height="25dp"
        android:text="@string/timerValue"
        android:textSize="18dp"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintVertical_bias="0.017"
        app:layout_constraintHorizontal_bias="1.0"
    />

    <!--&lt;!&ndash;<Button&ndash;&gt;-->
        <!--&lt;!&ndash;android:id="@+id/startTimer"&ndash;&gt;-->
        <!--&lt;!&ndash;android:layout_width="wrap_content"&ndash;&gt;-->
        <!--&lt;!&ndash;android:layout_height="wrap_content"&ndash;&gt;-->
        <!--&lt;!&ndash;android:text="@string/timerText"&ndash;&gt;-->
        <!--&lt;!&ndash;app:layout_constraintTop_toTopOf="parent"&ndash;&gt;-->
        <!--&lt;!&ndash;android:layout_marginTop="8dp"&ndash;&gt;-->
        <!--&lt;!&ndash;app:layout_constraintBottom_toBottomOf="parent"&ndash;&gt;-->
        <!--&lt;!&ndash;android:layout_marginBottom="8dp"&ndash;&gt;-->
        <!--&lt;!&ndash;android:layout_marginRight="8dp"&ndash;&gt;-->
        <!--&lt;!&ndash;app:layout_constraintRight_toRightOf="parent"&ndash;&gt;-->
        <!--&lt;!&ndash;android:layout_marginLeft="8dp"&ndash;&gt;-->
        <!--&lt;!&ndash;app:layout_constraintLeft_toLeftOf="parent"&ndash;&gt;-->
        <!--&lt;!&ndash;app:layout_constraintVertical_bias="0.928"&ndash;&gt;-->
        <!--&lt;!&ndash;app:layout_constraintHorizontal_bias="0.075" />&ndash;&gt;-->

    <Button
        android:id="@+id/pauseTimer"
        android:layout_width="75dp"
        android:layout_height="39dp"
        android:text="@string/pauseText"
        android:textSize="10dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintVertical_bias="0.982"
        app:layout_constraintHorizontal_bias="0.453" />


    <Button
        android:id="@+id/resetTimer"
        android:layout_width="72dp"
        android:layout_height="40dp"
        android:text="@string/stopText"
        android:textSize="10dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.449"
        app:layout_constraintVertical_bias="0.0" />


    <Button
        android:id="@+id/beginnerButton"
        android:layout_width="89dp"
        android:layout_height="39dp"
        android:text="@string/beginner"
        android:textSize="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.028"
        app:layout_constraintVertical_bias="0.105" />

    <Button
        android:id="@+id/intermediateButton"
        android:layout_width="116dp"
        android:layout_height="39dp"
        android:text="@string/Intermediate"
        android:textSize="10dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintVertical_bias="0.105" />

    <Button
        android:id="@+id/expertButton"
        android:layout_width="88dp"
        android:layout_height="41dp"
        android:textSize="10dp"
        android:text="@string/Expert"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.971"
        app:layout_constraintVertical_bias="0.105" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="70dp"
        android:layout_height="24dp"
        android:text="@string/TimerLabel"
        android:textAlignment="center"
        android:textSize="18dp"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.872"
        app:layout_constraintVertical_bias="0.016" />


    <TextView
        android:id="@+id/flagLabel"
        android:layout_width="70dp"
        android:layout_height="24dp"
        android:text="@string/FlagLabel"
        android:textAlignment="center"
        android:textSize="18dp"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintVertical_bias="0.017"
        app:layout_constraintHorizontal_bias="0.0" />


    <TextView
        android:id="@+id/flagCounter"
        android:layout_width="38dp"
        android:layout_height="25dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="0"
        android:textSize="18dp"
        android:textColor="@android:color/black"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.017"
        app:layout_constraintHorizontal_bias="0.19" />

    <TextView
        android:id="@+id/mineLabel"
        android:layout_width="155dp"
        android:layout_height="23dp"
        android:text="@string/MineLabel"
        android:textAlignment="center"
        android:textSize="18dp"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintVertical_bias="0.187"
        app:layout_constraintHorizontal_bias="0.159" />

    <TextView
        android:id="@+id/mineValue"
        android:layout_width="57dp"
        android:layout_height="25dp"
        android:text="@string/mineValue"
        android:textAlignment="center"
        android:textSize="18dp"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.667"
        app:layout_constraintVertical_bias="0.187" />


    <GridView
        android:id="@+id/grid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/darker_gray"
        android:horizontalSpacing="1dp"
        android:numColumns="9"
        android:stackFromBottom="true"
        android:verticalSpacing="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.569">
    </GridView>

</android.support.constraint.ConstraintLayout>
